[package]
name = "flatbuffers"
version = "23.5.9"
edition = "2018"
authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers"]
license = "Apache-2.0"
description = "Official FlatBuffers Rust runtime library."
homepage = "https://google.github.io/flatbuffers/"
repository = "https://github.com/google/flatbuffers"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust = "1.51"

[features]
default = ["std"]
std = []
serialize = ["serde"]

[dependencies]
bitflags = "1.2.1"
serde = { version = "1.0", optional = true }

[build-dependencies]
rustc_version = "0.4.0"
