[package]
name = "flexbuffers"
version = "0.1.0"
authors = ["Casper Neo <cneo@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = "1.0.103"
serde_derive = "*"
byteorder = "1.3.2"
num_enum = "0.4.1"
debug_stub_derive = "0.3.0"
bitflags = "1.2.1"

[dev-dependencies]
bencher = "*"
quickcheck = "*"
quickcheck_derive = "*"
rand = "*"
