[package]
name = "flexbuffers"
version = "0.1.1"
authors = ["Casper Neo <cneo@google.com>", "FlatBuffers Maintainers"]
edition = "2018"
license = "Apache-2.0"
description = "Official FlexBuffers Rust runtime library."
homepage = "https://google.github.io/flatbuffers/flexbuffers"
repository = "https://github.com/google/flatbuffers"
keywords = ["flatbuffers", "flexbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
byteorder = "1.3.2"
num_enum = "0.5.0"
bitflags = "1.2.1"
